# globs

./: .gitignore  BistroExterior.glb  DiningRoom.glb  FlatArchiviz.glb  Kitchen.glb  README.md  SanMiguel.glb  SanMiguelLowPoly.glb  Sibenik.glb  Sponza.glb  SunTemple.glb  ZeroDay.glb  pyproject.toml
blender/: Barbershop.blend  Sponza.blend
scenes/: Barbershop.glb  Bathroom.glb  Bedroom.glb  Classroom.glb  CornellBox.glb  GlassOfWater.glb  LivingRoom.glb  Staircase.glb  VeachBidir.glb
viewer/: camera.py  env.py  gizmos.py  gltf_loader.py  logsetup.py  main.py  viewer.py
viewer/shaders/: gizmo.slang  grid.slang  light_icons.slang  pathtrace.slang  scene.slang  shadow.slang  sky.slang  thick_line.slang
